--- a/mousefood/Cargo.toml
+++ b/mousefood/Cargo.toml
@@ -37,3 +37,7 @@ underline-color = ["ratatui-core/underline-color"]
 
 [lints]
 workspace = true
+
+[package.metadata.docs.rs]
+all-features = true
+rustdoc-args = ["--cfg", "docsrs"]
